fix(clayui.com): Move `code-collapse.js` code to `CodeToggle` component? and update so it works in IE11
fix(clayui.com): CSS Pages should have code collapsed by default

fix(clayui.com): Adds `focusable="false"` to code collapse svgs so IE11 doesn't focus them on tab

--- a/clayui.com/src/styles/_code.scss
+++ b/clayui.com/src/styles/_code.scss
@@ -1,10 +1,32 @@
 .code-container {
-	margin: calc(1rem * 1.5) 0;
+	margin: 1.5rem 0;
 	position: relative;
+
+	.gatsby-highlight > code {
+		display: none;
+	}
+
+	.btn-collapse {
+		.icon-collapse--expanded {
+			display: none;
+		}
+	}
 }
 
-.code-container.hide {
-	display: none;
+.code-container.expanded {
+	pre > code {
+		display: block;
+	}
+
+	.btn-collapse {
+		.icon-collapse--collapsed {
+			display: none;
+		}
+
+		.icon-collapse--expanded {
+			display: inline-block;
+		}
+	}
 }
 
 .code-container pre code {
